@@ -1,12 +1,12 @@
 {
-  "timestamp" : "2025-11-29T00:58:43Z",
-  "count_outdated" : 1078,
-  "uniques_outdated" : 684,
-  "count" : 1079,
-  "uniques" : 685,
+  "timestamp" : "2025-12-08T01:02:08Z",
+  "count_outdated" : 1079,
+  "uniques_outdated" : 685,
+  "count" : 1080,
+  "uniques" : 686,
   "clones" : [
     {
-      "timestamp": "2025-11-20T00:00:00Z",
+      "timestamp": "2025-12-07T00:00:00Z",
       "count": 1,
       "count_minmax": [ 1, 1 ],
       "count_decinc": [ 0, 1 ],
